err/vimanga.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/blessed'...
Listing './lib/python3.5/site-packages/blessed/tests'...
Listing './lib/python3.5/site-packages/blessed-1.14.2.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/fire'...
Listing './lib/python3.5/site-packages/fire-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/reportlab'...
Listing './lib/python3.5/site-packages/reportlab/.libs'...
Listing './lib/python3.5/site-packages/reportlab/fonts'...
Listing './lib/python3.5/site-packages/reportlab/graphics'...
Listing './lib/python3.5/site-packages/reportlab/graphics/barcode'...
Listing './lib/python3.5/site-packages/reportlab/graphics/charts'...
Listing './lib/python3.5/site-packages/reportlab/graphics/samples'...
Listing './lib/python3.5/site-packages/reportlab/graphics/widgets'...
Listing './lib/python3.5/site-packages/reportlab/lib'...
Listing './lib/python3.5/site-packages/reportlab/pdfbase'...
Listing './lib/python3.5/site-packages/reportlab/pdfgen'...
Listing './lib/python3.5/site-packages/reportlab/platypus'...
Listing './lib/python3.5/site-packages/reportlab-3.4.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tebless'...
Listing './lib/python3.5/site-packages/tebless/devs'...
Compiling './lib/python3.5/site-packages/tebless/devs/_debug.py'...
***   File "./lib/python3.5/site-packages/tebless/devs/_debug.py", line 37
    debug(f" < {self._obj} > ".center(80, "="))
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tebless/devs/_widget.py'...
***   File "./lib/python3.5/site-packages/tebless/devs/_widget.py", line 69
    raise AttributeError(f'{self} object has no attribute {name}')
                                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tebless/themes'...
Compiling './lib/python3.5/site-packages/tebless/themes/menu.py'...
***   File "./lib/python3.5/site-packages/tebless/themes/menu.py", line 83
    wrapper = f'{line}\n{l_eq}{{}}\n{line}'
                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tebless/utils'...
Listing './lib/python3.5/site-packages/tebless/widgets'...
Listing './lib/python3.5/site-packages/tebless-1.2.3.dist-info'...
Listing './lib/python3.5/site-packages/tqdm'...
Listing './lib/python3.5/site-packages/tqdm-4.19.5.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/vimanga'...
Listing './lib/python3.5/site-packages/vimanga/api'...
Compiling './lib/python3.5/site-packages/vimanga/cli.py'...
***   File "./lib/python3.5/site-packages/vimanga/cli.py", line 52
    utils.convert_to_pdf(f'Capitulo {chapter.number}.pdf',
                                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vimanga/utils.py'...
***   File "./lib/python3.5/site-packages/vimanga/utils.py", line 38
    desc=f'Capitulo {chapter.number}',
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vimanga-0.2.1.dist-info'...
Listing './lib/python3.5/site-packages/wcwidth'...
Listing './lib/python3.5/site-packages/wcwidth/tests'...
Listing './lib/python3.5/site-packages/wcwidth-0.1.7.dist-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
